[package]
name = "aoc_api"
version = "2.1.0"
edition = "2021"
authors = ["Antonio Subašić <antonio.subasic.public@gmail.com>"]
description = "a simple Advent of Code API"
repository = "https://github.com/antoniosubasic/aoc_api"
license = "GPL-3.0"
keywords = ["AoC", "Advent-of-Code", "API"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
tokio = { version = "1.47.0", features = ["full"] }
